--- a/entry.html
+++ b/entry.html
@@ -145,8 +145,8 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Dashboard
-            <small></small>
+            Bill token System
+            <small>Token Entry</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
