--- a/token2.html
+++ b/token2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bill Token Que System | IT Cell Treasury</title>
+    <title>Cheque Token Que System | IT Cell Treasury</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />    
@@ -103,7 +103,7 @@
           <ul class="sidebar-menu">
             <li class="header"></li>
             <li class="">
-              <a href="index.html">
+              <a href="token2.html">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
               </a>
              
@@ -122,8 +122,8 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a target="blank" href="https://script.google.com/macros/s/AKfycby7V7xR87MUmgdTTUSqRkZs_Y5la5j4dD9K8GibByBkolJF4Li1lFg9rOYksXJevKnbTw/exec"><i class="fa fa-circle-o" ></i> Entry</a></li>
-                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzO3sYVN68ZxEpWevlAYZk2SbbrVVw__9-to8SPa_W9yeF9UsjQIkx42xtrBaWSrRjJXQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbwDSVL9VdH0_NFAp07_1puwFBqmYMdQXZCAELp7h6SNsWizVCzxunCw6PTJByCAQow_Jw/exec"><i class="fa fa-circle-o" ></i> Entry</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbwUmCLfpgPO5IfI_6Fvpx4wspLJdGmOBTsDniE2hNqha-N2-I81QhZnFXYkbmYyvoHwfg/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
@@ -149,7 +149,7 @@
             <small></small>
           </h1>
           <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="token2.html"><i class="fa fa-dashboard"></i> Home</a></li>
             <li class="active">Dashboard</li>
           </ol>
         </section>
