--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a href="entry.html"><i class="fa fa-circle-o"></i> Entry</a></li>
+                <li><a href="https://script.google.com/macros/s/AKfycbywnRUTUTeocQyOq72YzSvgFBqVfqBDo5Rk_qTLhMzm5CP9fpcjsCq-HR58niYWIusjuA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
