--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a href="https://script.google.com/macros/s/AKfycbywnRUTUTeocQyOq72YzSvgFBqVfqBDo5Rk_qTLhMzm5CP9fpcjsCq-HR58niYWIusjuA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbywnRUTUTeocQyOq72YzSvgFBqVfqBDo5Rk_qTLhMzm5CP9fpcjsCq-HR58niYWIusjuA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
              <li class="treeview">
@@ -134,10 +134,10 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a href="https://script.google.com/macros/s/AKfycbyWVLlozT86ZPMRIUKRfp3b8C2yMCSyLzEhMkgO7xr6s2EQqT2pS7sh9Rpj-ekQ6iaNWg/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyWVLlozT86ZPMRIUKRfp3b8C2yMCSyLzEhMkgO7xr6s2EQqT2pS7sh9Rpj-ekQ6iaNWg/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
             
