Update77 index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </a>
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbywnRUTUTeocQyOq72YzSvgFBqVfqBDo5Rk_qTLhMzm5CP9fpcjsCq-HR58niYWIusjuA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyP3IlhYUOgu6HNkSJhR0aSSct_-LCB7AdHZUv7ALN9_bQ0EcSpDiMTyDtlmVOCXvbYRQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
