--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbywnRUTUTeocQyOq72YzSvgFBqVfqBDo5Rk_qTLhMzm5CP9fpcjsCq-HR58niYWIusjuA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyP3IlhYUOgu6HNkSJhR0aSSct_-LCB7AdHZUv7ALN9_bQ0EcSpDiMTyDtlmVOCXvbYRQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
              <li class="treeview">
@@ -135,9 +135,9 @@
               </a>
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyWVLlozT86ZPMRIUKRfp3b8C2yMCSyLzEhMkgO7xr6s2EQqT2pS7sh9Rpj-ekQ6iaNWg/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a target="blank" href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
             
