--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxP0TJh9kgPYFXAgc0gEPGrVynL12_mnEVw7Hr9YZLJgEeuJlZ_wSvgo9ysQ6bn3MOFWw/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzY2dSpGj8UJSnVYwCl2fXD2Wkwz-Rbu9rUtdfLHg7Zw7iYJ3Ar04Qj5rZCoVM04XnInA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyP3IlhYUOgu6HNkSJhR0aSSct_-LCB7AdHZUv7ALN9_bQ0EcSpDiMTyDtlmVOCXvbYRQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
@@ -135,7 +135,7 @@
               </a>
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzvwpleXDHvSjOgtF3mCnxqI9hUkcI2WIS1q0v7lHZv-L-yJSXwe9tO-KovJjwLmUl4mw/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
-                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Edit</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxk7_JOmp2NoURw2hmF6b1SVMVgFW1GPKNDKzdWKE-h29o-VBCcqrG8kweaV_cMpjLv/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
