--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzY2dSpGj8UJSnVYwCl2fXD2Wkwz-Rbu9rUtdfLHg7Zw7iYJ3Ar04Qj5rZCoVM04XnInA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbz5KA0eFCf-CU4xvnwxP2mRRgYe3YJOylSqDlNbNY8WUVkxgCnhS0RRGp8FmU-Vs_c6yQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxEaU4FATZUNLiZZDs1XCAFJt_DWHWWvid4ofuezVwcU8RDskrlF-IuYalFZxKqY0qPWg/exec"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
@@ -136,7 +136,7 @@
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzlNV5zi4Vn3wVyjD2fsOpuRhy1BXTh_90rw2Se85Sb4OQ23VYJ4Jt8LHJV39-oRuU8WQ/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzt_q6NwPu4_s4k1vsEruyZnSCZ5xx321Ou2BD6Pre-rzwHVa8DtP9Nkvi9z-YiyUJf/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Que</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxVYZWoJX4p5bJFLtU7eqJli77l7ZqsVTwVCVubKjd-ddykEOX5qBh4pp-MAL_87Xyotg/exec"><i class="fa fa-circle-o"></i> Que</a></li>
                 <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
               </ul>
             </li>
