--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbziq1C3-jnAhsUQxxmowrbIUHwU4DeoAsw0U1yG_FRy26pp-pbTAAORaRKdX11qWq3D_g/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbz5KA0eFCf-CU4xvnwxP2mRRgYe3YJOylSqDlNbNY8WUVkxgCnhS0RRGp8FmU-Vs_c6yQ/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxEaU4FATZUNLiZZDs1XCAFJt_DWHWWvid4ofuezVwcU8RDskrlF-IuYalFZxKqY0qPWg/exec"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxY3XG0zpoQ2y6HhWkLIrcm2wLvtdbKT9-PCV6KWBHt1bGxwGGH-vvoN4v-4E6UkERMVw/exec"><i class="fa fa-circle-o"></i> DDO Wise Search</a></li>                 
               </ul>
             </li>
              <li class="treeview">
