--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
           </a>
+          <div class="pull-left"><img src="https://itcelltreasury.github.io/admin2/dist/img/bill_chequetoken.png"></div>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               
