--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               <ul class="treeview-menu" style="display: none;">
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbye61o6VsCwYd1L7qvICWTw5xHqW7gKA9v_lGFCrKNrxj7ALovYHGKPyhA5iVDlHGGM6g/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbxP1mq95SavLD44KBm4D_jS30ez7lsxtIS9dX0R-MlKf4rqvin-cErlY2Ai_nN4jTVC/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
-                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbypbBoTclXHP4eqNqh8vRE0en-70k-kXpHIlT7Lc0reVKJ5zhPRUtWqgwx-_oCSt1JlbA/exec"><i class="fa fa-circle-o"></i> Que</a></li>
-                <li><a target="blank" href="#"><i class="fa fa-circle-o"></i> Search</a></li>                 
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbypbBoTclXHP4eqNqh8vRE0en-70k-kXpHIlT7Lc0reVKJ5zhPRUtWqgwx-_oCSt1JlbA/exec"><i class="fa fa-circle-o"></i> Cheque Que</a></li>
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbw3c4ArYMDBbwMBiHn8QKf3v7Zj4PbLgvmTvnwTSK4xv7USj9xnLHG4ImLK3KfaUIIC/exec"><i class="fa fa-circle-o"></i>Office Wise Search</a></li>                 
               </ul>
             </li>
             
