--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbw-ozHTbOL7wxv8bsU1praUYuPKE6SpMxRXomklcMgncUkE7V1L6MbkBOXIFFdMs6w0mQ/exec"><i class="fa fa-circle-o"></i> Dash Board</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbw5o-N7wtqgo8PNwqLdYgZGJI1Fv2UfLBS9KO-8O6s4qQcqbkZ8nbb4DPlsVQswx6CfHA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbz9EQQQmSrTALD5T2fxE_hEJ1OOr6LP04wsqdn-YH6gh-NPmYL3PbNKxAevv5rtO2iPFg/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzHT0I34oq6HcGG5aMJ6VA42vtpyzjPLYZ2zpoQyhT2X4VSCKooXGgMkCnR2Lksd7VuYw/exec"><i class="fa fa-circle-o"></i> Que</a></li>
