--- a/index2.html
+++ b/index2.html
@@ -123,6 +123,7 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu" style="display: none;">
+                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbw-ozHTbOL7wxv8bsU1praUYuPKE6SpMxRXomklcMgncUkE7V1L6MbkBOXIFFdMs6w0mQ/exec"><i class="fa fa-circle-o"></i> Dash Board</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbw5o-N7wtqgo8PNwqLdYgZGJI1Fv2UfLBS9KO-8O6s4qQcqbkZ8nbb4DPlsVQswx6CfHA/exec"><i class="fa fa-circle-o"></i> Entry</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbz9EQQQmSrTALD5T2fxE_hEJ1OOr6LP04wsqdn-YH6gh-NPmYL3PbNKxAevv5rtO2iPFg/exec"><i class="fa fa-circle-o"></i> Edit</a></li>
                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzHT0I34oq6HcGG5aMJ6VA42vtpyzjPLYZ2zpoQyhT2X4VSCKooXGgMkCnR2Lksd7VuYw/exec"><i class="fa fa-circle-o"></i> Que</a></li>
@@ -169,7 +170,39 @@
         <!-- Main content -->
         <section class="content">
           
-          
+          <div class="row">
+            <div class="col-lg-3 col-xs-6">
+              <!-- small box -->
+              <div class="small-box bg-aqua">
+                <div class="inner">
+                  <h3  id="cellValue" ></h3>
+                  <p>Total Tokens</p>
+                  <script>
+  // Replace 'YOUR_SHEET_ID' with your actual Google Sheet ID
+  const sheetId = '1IVNc7bKiWxrulGgdcpb4rNKVhfCIzPoBRLli1SZZcr8';
+  // Replace 'YOUR_API_KEY' with your actual Google API key
+  const apiKey = 'AIzaSyBAuS3Brpsw5JOJnjNJii1UlFa7ClXf8d4';
+
+  // Fetch cell value from Google Sheet
+  fetch(`https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/A1?key=${apiKey}`)
+    .then(response => response.json())
+    .then(data => {
+      const cellValue = data.values[0][0];
+      document.getElementById('cellValue').textContent = cellValue;
+    })
+    .catch(error => console.error('Error fetching data:', error));
+</script>
+                </div>
+                <div class="icon">
+                  <i class="ion ion-bag"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+              </div>
+            </div><!-- ./col -->
+            <!-- ./col -->
+            <!-- ./col -->
+            <!-- ./col -->
+          </div>
 
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
