--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li class="header"></li>
             <li class="">
               <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
+                <i class="fa fa-dashboard"></i> <span>Home</span> 
               </a>
              
             </li>
