--- a/index2.html
+++ b/index2.html
@@ -158,8 +158,8 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Dashboard
-            <small></small>
+            Home2
+            <small>Bill & Cheque Token System 2.0</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
