--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
           </a>
-          <div class="pull-left apptitle"><img src="https://itcelltreasury.github.io/admin2/dist/img/bill_chequetoken.png"></div>
+          <div class="pull-left apptitle"><h4 style="font-size: 25px;color: #ecf0f5;font-weight: bold;text-shadow: 2px 2px #262626;"> Bill & Cheque Token System </h4></div>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               
