--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <!-- AdminLTE for demo purposes -->
     <script src="dist/js/demo.js" type="text/javascript"></script>
 
-    <script src="https://adminlte.io/themes/AdminLTE/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="https://adminlte.io/themes/AdminLTE/bower_components/jquery/dist/jquery.min.js"></script>
 
 
 
@@ -224,6 +224,10 @@
 <script src="https://adminlte.io/themes/AdminLTE/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 
 <script src="https://adminlte.io/themes/AdminLTE/bower_components/fastclick/lib/fastclick.js"></script>
+
+<script src="https://adminlte.io/themes/AdminLTE/dist/js/adminlte.min.js"></script>
+
+<script src="https://adminlte.io/themes/AdminLTE/dist/js/demo.js"></script>
 <script>
   // To make Pace works on Ajax calls
   $(document).ajaxStart(function () {
