--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/bower_components/font-awesome/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/skins/_all-skins.min.css">
+<link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/bower_components/Ionicons/css/ionicons.min.css">
 
-    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/plugins/pace/pace.min.css">
+<link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/AdminLTE.min.css">
+
+<link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/skins/_all-skins.min.css">
+
+<link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/plugins/pace/pace.min.css">
   </head>
   <body class="hold-transition skin-green-light sidebar-mini">
     <div class="wrapper">
@@ -125,11 +129,13 @@
             
             <li class="treeview">
               <a href="#">
-                <i class="fa fa-folder"></i> <span>Token System</span>
+                <i class="fa fa-folder"></i> <span> Token System </span>
+                <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
+                   </span>
               </a>
               <ul class="treeview-menu" style="display: none;">
-                <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyy05Ne5X18czR-OVNT_dZisUIgNyWs5eoRoe6D2oGl/dev"><i class="fa fa-circle-o"></i> Bill Token System</a></li>
+                 <li><a target="blank" href="https://script.google.com/macros/s/AKfycbyy05Ne5X18czR-OVNT_dZisUIgNyWs5eoRoe6D2oGl/dev"><i class="fa fa-circle-o"></i> Bill Token System</a></li>
                  <li><a target="blank" href="https://script.google.com/macros/s/AKfycbzV5GO-YvWEF9qsbhLRhqU_CXmWa7QpKLryDw6p6Yf8/dev"><i class="fa fa-circle-o"></i> Cheque Token System</a></li>
               </ul>
             </li>
