--- a/index.html
+++ b/index.html
@@ -44,13 +44,19 @@
 <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/skins/_all-skins.min.css">
 
 <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/plugins/pace/pace.min.css">
+    <style>
+        .pace .pace-progress {
+  background:#FFCC00;
+  
+}
+         </style>
   </head>
   <body class="hold-transition skin-green-light sidebar-mini">
     <div class="wrapper">
       
       <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo"><b>IT Cell </b>Treasury</a>
+        <a href="index.html" class="logo"><b>IT Cell </b>Treasury</a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
