--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <ul class="sidebar-menu">
             <li class="header">NAVIGATION</li>
             <li class="">
-              <a target="_top" href="https://script.google.com/macros/s/AKfycbyy05Ne5X18czR-OVNT_dZisUIgNyWs5eoRoe6D2oGl/dev">
+              <a target="_top" href="index.html">
                 <i class="fa fa-dashboard"></i> <span>Home</span> 
               </a>
              
