--- a/mobile.html
+++ b/mobile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bill Token Que System | IT Cell Treasury</title>
+    <title>eAdmin | IT Cell Treasury</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />    
@@ -63,7 +63,7 @@
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
           </a>
-          <div class="pull-left apptitle"><h4 style="font-size: 25px;color: #ecf0f5;font-weight: bold;text-shadow: 2px 2px #262626;"> Bill & Cheque Token System </h4></div>
+          <div class="pull-left apptitle"><h4 style="font-size: 25px;color: #ecf0f5;font-weight: bold;text-shadow: 2px 2px #262626;"> eAdmin </h4></div>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               
