--- a/mobile.html
+++ b/mobile.html
@@ -51,7 +51,7 @@
 }
          </style>
   </head>
-  <body class="hold-transition skin-green-light sidebar-mini">
+  <body class="hold-transition skin-red-light sidebar-mini">
     <div class="wrapper">
       
       <header class="main-header">
