--- a/eadmin.html
+++ b/eadmin.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Bill Token Que System | IT Cell Treasury</title>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+  </head>
+  <body class="hold-transition skin-green-light sidebar-mini">
+    <div class="wrapper">
+ <iframe  src=" https://script.google.com/macros/s/AKfycbzh8noFlbVQIy5_cCjk5BVqTS1tt0Ia6f-ecz5PPXgl5pjXm4N1VltbdVT4gvJ3NayDfw/exec" class="pendingframe" id="pendingframe" title="" name="table02" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera"  frameborder="0" style="min-width: 100vw; height: 100vh; border: none; display: block;" scrolling="no">  
+</iframe> 
+    </div>
+  </body>
+</html>
