--- a/eadmin.html
+++ b/eadmin.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bill eAdmin | IT Cell Treasury</title>
+    <title>eAdmin | IT Cell Treasury</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   </head>
   <body class="hold-transition skin-green-light sidebar-mini">
