--- a/eadmin.html
+++ b/eadmin.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>eAdmin | IT Cell Treasury</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <style>
+      .body {
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+    </style>
   </head>
   <body class="hold-transition skin-green-light sidebar-mini">
     <div class="wrapper">
