--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
   background:#FFCC00;
   
 }
+      .skin-green-light .main-header .navbar {
+    background-color: #333b4d;
+}
+.skin-green-light .main-header .logo {
+    background-color: #dd4b39;
+    color: #fff;
+    border-bottom: 0 solid transparent;
+}
+.main-header .sidebar-toggle {
+    float: left;
+    background-color: #333b4d;
+   
+}
          </style>
   </head>
   <body class="hold-transition skin-green-light sidebar-mini">
