--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <script>
   (function() {
   var idleDurationSecs = 60;
-  var redirectUrl = 'https://itcelltreasury.blogspot.com/';  // Redirect idle users to this URL
+  var redirectUrl = 'https://itcelltreasury.github.io/admin2/';  // Redirect idle users to this URL
   var idleTimeout;
 
   var resetIdleTimeout = function() {
