--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         
             <li class="treeview">
               <a href="#">
-                <i class="fa fa-folder"></i> <span>Bill & Cheque Token System </span>
+                <i class="fa fa-folder"></i> <span>Token System </span>
                 <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
                 </span>
