--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               
           <li class="treeview">
 <a href="#">
-<i class="fa fa-folder-o"></i> <span>IT Cell</span>
+ <i class="fa fa-folder"></i> <span>IT Cell</span>
 <span class="pull-right-container">
 <i class="fa fa-angle-left pull-right"></i>
 </span>
