--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
   background:#FFCC00;
   
 }
-      .skin-green-light .main-header .navbar {
-    background-color: #333b4d;
+      .skin-red-light .main-header .navbar {
+    background-color: #333b4d !important;
 }
-.skin-green-light .main-header .logo {
-    background-color: #dd4b39;
+.skin-red-light .main-header .logo {
+    background-color: #dd4b39!important;
     color: #fff;
     border-bottom: 0 solid transparent;
 }
 .main-header .sidebar-toggle {
     float: left;
-    background-color: #333b4d;
+    background-color: #333b4d!important;
    
 }
          </style>
