--- a/currencyDenominator.html
+++ b/currencyDenominator.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h2>Indian Currency Denomination Arranger</h2>
+<h2>IT  Cell Treasury- Currency Denomination Arranger</h2>
 
 <form id="currencyForm">
   <label for="amount">Enter Amount (INR):</label>
